--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,23 @@
 version: 2.1
-orbs:
-  python: circleci/python@2.1.1
 jobs:
-  build_and_test: # this can be any name you choose
-    executor: python/default # use the default executor defined within the orb
+  build:
+    docker:
+      - image: circleci/python:3.8
     steps:
-      - checkout # checkout source code
-      - python/install-packages:
-          pkg-manager: pip
+      - checkout
       - run:
-          name: Run tests
-          command: python -m pytest
+          name: Install Dependencies
+          command: |
+            python -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - run:
+          name: Run Tests
+          command: |
+            . venv/bin/activate
+            pytest
 workflows:
-  build_test_deploy:
+  version: 2
+  build-and-test:
     jobs:
-      - build_and_test
-      
+      - build
