--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 kiwisolver==1.4.7
-Mako==1.3.8.dev0
+Mako==1.3.8
 Markdown==3.5.2
 MarkupSafe==3.0.2
 matplotlib==3.10.0
