--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ pyparsing==3.1.4
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
-setuptools==75.6.0.post20241226
+setuptools==75.3.0
 six==1.17.0
 tzdata==2024.2
 virtualenv==20.28.0
