--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           command: |
             . venv/bin/activate
             pytest
+      - run: |
+          sudo apt-get update
+          sudo apt-get install -y libgirepository1.0-dev  # Installs gobject-introspection-dev
 workflows:
   version: 2
   build-and-test:
