--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
       - run: |
           sudo apt-get update
           sudo apt-get install -y libgirepository1.0-dev  # Installs gobject-introspection-dev
+      - store_artifacts:
+          path: bar_chart_output.png  
+          destination: bar_chart_output.png 
 workflows:
   version: 2
   build-and-test:
