--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
       - store_artifacts:
           path: bar_chart_output.png  
           destination: bar_chart_output.png #uploads an artifact
+      - store_artifacts:
           path: box_plot_output.png  
           destination: box_plot_output.png #uploads an artifact
 workflows:
