--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgirepository1.0-dev  # Installs gobject-introspection-dev
       - store_artifacts:
-          path: |
-            bar_chart_output.png
-            box_plot_output.png
-          destination: outputs
+          path: box_plot_output.png  
+          destination: box_plot_output.png #uploads an artifact
 workflows:
   version: 2
   build-and-test:
