--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ jobs:
       - store_artifacts:
           path: trend_disorder_output.png
           destination: trend_disorder_output.png #uploads an artifact
+      - store_artifacts:
+          path: scatter_disorder_plot.png
+          destination: scatter_disorder_plot.png #uploads an artifact          
 workflows:
   version: 2
   build-and-test:
