--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,10 @@ jobs:
           destination: scatter_disorder_plot.png #uploads an artifact      
       - store_artifacts:
           path: regional_bar_chart.png
-          destination: regional_bar_chart.png #uploads an artifact       
+          destination: regional_bar_chart.png #uploads an artifact
+      - store_artifacts:
+          path: population_vs_disorder.png
+          destination: population_vs_disorder.png #uploads an artifact        
 workflows:
   version: 2
   build-and-test:
